
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (095) 787-6090

********************************************************************************

  March 15 2017, 13:30
  deviceServiceVersion = 1013394
	
  [-] Fixed error with last item in printRecItem method
  
********************************************************************************

  March 13 2017, 15:06
  deviceServiceVersion = 1013392
	
  [+] Added stripExceptionDetails parameter
  [+] Added FSSender
  
********************************************************************************

  March 6 2017, 15:42
  deviceServiceVersion = 1013390
	
  [+] Added correction to read cash register
  
********************************************************************************

  March 3 2017, 21:10
  deviceServiceVersion = 1013389
	
  [-] Fixed error with loadLogo method
  
********************************************************************************

  March 2 2017, 12:00
  deviceServiceVersion = 1013386
	
  [-] Fixed error with cash registers 185..188
  
********************************************************************************

  March 1 2017, 20:00
  deviceServiceVersion = 1013385
	
  [-] Fixed error with nonfiscal header
  [-] Fixed error with loading header and trailer
  
********************************************************************************

  February, 27 2017, 16:52
  deviceServiceVersion = 1013384
	
  [-] Fixed error with getData(FPTR_GD_PRINTER_ID)
  
********************************************************************************

  February, 21 2017, 16:51
  deviceServiceVersion = 1013382
	
  [-] Fixed error with barcode printing
  [-] Fixed error with tax printing
  
********************************************************************************

  February, 17 2017, 21:10
  deviceServiceVersion = 1013380
	
  [-] Fixed discount printing
  