@@ -6,6 +6,15 @@
 
 ********************************************************************************
 
+  March 21 2017, 23:30
+  deviceServiceVersion = 1013395
+	
+  [-] Fix error with receipt format
+  [+] Add directIO command SMFPTR_DIO_READ_FS_TICKETS
+  [+] Add directIO command SMFPTR_DIO_READ_FS_TICKETS2
+  
+********************************************************************************
+
   March 15 2017, 13:30
   deviceServiceVersion = 1013394
 	
